# aavcf

./: CMakeLists.txt  README.md
lib/: gzstream.C  migrations.cpp  string_split.cpp  string_split.hpp
src/: fasta.cpp  fasta.h  main.cpp
